# FrodoKEM

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  exec  go.mod  main.go  main1344.txt  main640.txt  main976.txt  zkpop-exec
zkpop/: api_frodo1344.h.txt  api_frodo640.h  api_frodo640.h.txt  api_frodo976.h.txt  frodoKEM.go  frodoKEM1344.txt  frodoKEM640.txt  frodoKEM976.txt  frodokem1344.txt  frodokem640.txt  kyberKEM.go  zkpop.go  zkpop1344.txt  zkpop640.txt  zkpop976.txt  zkpop_frodo1344.go  zkpop_frodo640.go  zkpop_frodo976.go
zkpop/kyber/: api.h  api_kyber_zkpop.h  params.h
zkpop/zkpop/: mainANTIGO.go  zkpopANTIGO.go
